[package]
name = "seastar"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dependency-free, non-generic implementation of the A* pathfinding algorithm."
repository = "https://github.com/robertwayne/seastar"
categories = ["algorithms"]
keywords = ["a-star", "pathfinding", "astar", "a*"]
readme = "README.md"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
iridescent = "0.2"
rand = "0.8"

[[bench]]
name = "average_path"
harness = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
