[package]
name = "seastar"
authors = ["Rob Wagner <rob@sombia.com>"]
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Dependency-free implementation of the A* pathfinding algorithm for uniform-cost, 2D grids in cardinal directions."
repository = "https://github.com/robertwayne/seastar"
categories = ["algorithms"]
keywords = ["pathfinding", "astar"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
iridescent = "0.2"
rand = "0.8"

[features]
default = []
serde = ["dep:serde"]

[[bench]]
name = "average_path"
harness = false

[lib]
bench = false

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
